--- a/DCon/DCon.csproj
+++ b/DCon/DCon.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelpCommand.cs" />
+    <Compile Include="DocConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
