Added ABCs XML file

--- a/DCon/DCon.csproj
+++ b/DCon/DCon.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitattributes" />
+    <Content Include="ABCs.xml" />
     <Content Include="HelpDocs.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
