--- a/DCon/DCon.csproj
+++ b/DCon/DCon.csproj
@@ -96,6 +96,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnLetters.cs" />
     <Compile Include="FileExt.cs" />
     <Compile Include="HelpFlag.cs" />
     <Compile Include="DocConverter.cs" />
@@ -109,7 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitattributes" />
-    <Content Include="ABCs.xml" />
+    <Content Include="ABCs.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="HelpDocs.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
